[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hive_core"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
anyhow = "1.0.68"
h3ron = { version = "0.16.0", features = ["use-serde", "parse"] }
serde = { version = "1.0.143", features = ["derive"] }
pyo3 = { version = "0.17.3", features = ["extension-module", "anyhow"] }
